@@ -3,7 +3,7 @@ use strict;
 use AnyEvent;
 use Carp ();
 use Encode ();
-use Any::Moose;
+use Moose;
 use MIME::Base64 ();
 use JSON;
 use Try::Tiny;
@@ -240,7 +240,7 @@ sub render {
     $self->finish($self->application->render_file($file, { %$args, handler => $self })->as_string);
 }
 
-no Any::Moose;
+no Moose;
 __PACKAGE__->meta->make_immutable;
 
 1;
